zkay/examples/type_errors/StateVariables.zkay
pragma zkay >=0.2.0;

contract StateVariables {

    address super_owner;
	address@super_owner owner;
	uint@owner x;

}
